# gl

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  glscene.code-workspace
res/: frag.shader  startup.glscene  test.glscene
setup/: get_libs.sh
src/: Geometry.cpp  Geometry.h  MainWnd.cpp  MainWnd.h  Scene.cpp  Scene.h  main.cpp  settings_variables.cpp  settings_variables.h  types.h
src/common/: ExprParser.cpp  ExprParser.h  NumericTableWidgetItem.h  Recent.cpp  Recent.h  Resources.cpp  Resources.h
src/dialogs/: About.cpp  About.h  GeoBrowser.cpp  GeoBrowser.h  Settings.h  TextureBrowser.cpp  TextureBrowser.h  TrafoCalculator.cpp  TrafoCalculator.h
src/dock/: CamProperties.cpp  CamProperties.h  SelectionProperties.cpp  SelectionProperties.h  SimProperties.cpp  SimProperties.h
src/renderer/: Camera.h  GlRenderer.cpp  GlRenderer.h  GlRenderer_input.cpp  gl.cpp  gl.h
